--- a/app/form/main.html
+++ b/app/form/main.html
@@ -8,22 +8,24 @@
 <body>
     <h2>form to database(postgres)</h2>
     <div>
-        <form action="#" method="post">
+        <form action="/form" method="POST">
             <label for="fname">First name:</label>
             <input type="text" name="fname" id="fname" placeholder="Your first name"><br>
             <label for="lname">Last name:</label>
             <input type="text" name="lname" id="lname" placeholder="Your last name"><br>
+            <label for="phone">Phone number:</label>
+            <input type="text" name="phone" id="phone" placeholder="Your phone number"><br>
             <label for="email">Your Email address:</label>
             <input type="email" name="email" id="email" placeholder="Your email address"><br>
             <label for="date">Date of moving:</label>
             <input type="date" name="date" id="date" placeholder="Date of moving"><br>
-            <label for="moving-from">Moving from:</label>
-            <input type="text" name="moving-from" id="moving-from" placeholder="Moving from"><br>
-            <label for="moving-to">Moving to:</label>
-            <input type="text" name="moving-to" id="moving-to" placeholder="Moving to"><br>
-            <label for="additional-queries">Additional Queries:</label>
-            <input type="text" name="additional-queries" id="additional-queries" placeholder="additional-queries"><br>
-            <button type="submit">Submit</button>
+            <label for="moving_from">Moving from:</label>
+            <input type="text" name="moving_from" id="moving_from" placeholder="Moving from"><br>
+            <label for="moving_to">Moving to:</label>
+            <input type="text" name="moving_to" id="moving_to" placeholder="Moving to"><br>
+            <label for="additional_queries">Additional Queries:</label>
+            <input type="text" name="additional_queries" id="additional_queries" placeholder="additional queries"><br>
+            <button type="submit" id="submit">Submit</button>
         </form>
     </div>
     
